--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </div>
                 </div>
                 <div class="column">
-                    <img class="figure1" src="Graphics/PLACEHOLDER2.jpg"></img>
+                    <img class="figure1" src="/Graphics/placeholder2.jpg"></img>
         
                     <img class="figure1" src="https://drive.google.com/file/d/1Gu_qrMpE-nvzoRVKwTjsMcGE_iE3atrl/preview" ></img>
                 </div>
