--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 </div>
                 <div class="column">
                     <img class="figure1" src="/Graphics/placeholder2.jpg"></img>
+                    <div class="circleButton"></div>
                 </div>
             </div>
         </div>
