--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                     </div>
                 </div>
                 <div class="column">
+                    <div class="circleButton"></div>
                     <img class="figure1" src="/Graphics/placeholder2.jpg"></img>
                     <div class="circleButton"></div>
                 </div>
