expand button and content fix

--- a/index.html
+++ b/index.html
@@ -29,12 +29,11 @@
                     </div>
                 </div>
                 <div class="column">
-                    <div class="circleButton"></div>
-                    <img class="figure1" src="/Graphics/placeholder2.jpg"></img>
-                    <div class="circleButton"></div>
+                    <img class="figure1" src="Graphics/placeholder2.jpg"></img>
                 </div>
             </div>
         </div>
+        <div class="circleButton"></div>
         <div class="colorBar2"></div>
     </body>
 
