--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="icon" href="Graphics/favicon.png" type="image/png" sizes="16x16">
         <link rel="stylesheet" href="style.css" type="text/css">
         <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i" rel="stylesheet">
+        <script src="index_script.js"></script>
     </head>
     <body>
         <div class="colorBar"></div>
