--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
     <head>
         <link rel="icon" href="Graphics/favicon.png" type="image/png" sizes="16x16">
         <link rel="stylesheet" href="style.css" type="text/css">
-        <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i" rel="stylesheet">
         <script src="index_script.js"></script>
+        
+        <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i" rel="stylesheet">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+       
     </head>
     <body>
         <div class="colorBar"></div>
