--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
             </div>
         </div>
-        <div class="circleButton"></div>
+        <button id="circleButton" onclick="expandProject()"></button>
         <button id="colorBar2" onclick="openMenu()"></button>
     </body>
 
