adding expanded column

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
                 <div class="column">
                     <img class="figure1" src="Graphics/placeholder2.jpg"></img>
                 </div>
+                <div class="column">
+                        <p class="title">Title of Content</p>
+                        <p class="description">Premise .... Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet
+                            dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper.</p>
+                </div>
             </div>
         </div>
         <button id="circleButton" onclick="expandProject()"></button>
