--- a/index.html
+++ b/index.html
@@ -15,31 +15,33 @@
         <p class="nameBar">AARON GREIDER</p>
         <div class="flex">
         
-            <div class="container">
-                <div class="column" id="content">
-                    <p class="title">Title of Content</p>
-                    <p class="description">Premise .... Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet
-                    dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper.</p>
-                </div> 
-                <div class="column">
-                    <div class="circleContainer">
-                        <div class="circle"></div>
-                        <div class="circle"></div>
-                        <div class="circle"></div>
-                        <div class="circle"></div>
-                        <div class="circle"></div>
-                        <div class="circle"></div>
-                        <div class="circle"></div>
-                        <div class="circle"></div>
-                    </div>
-                </div>
-                <div class="column">
-                    <img class="figure1" src="Graphics/placeholder2.jpg"></img>
-                </div>
-                <div class="column">
+            <div class="galleryViewport">
+                <div class="galleryContent">
+                    <div class="column colTitle">
                         <p class="title">Title of Content</p>
                         <p class="description">Premise .... Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet
-                            dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper.</p>
+                        dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper.</p>
+                    </div> 
+                    <div class="column colCircMenu">
+                        <div class="circleContainer">
+                            <div class="circle"></div>
+                            <div class="circle"></div>
+                            <div class="circle"></div>
+                            <div class="circle"></div>
+                            <div class="circle"></div>
+                            <div class="circle"></div>
+                            <div class="circle"></div>
+                            <div class="circle"></div>
+                        </div>
+                    </div>
+                    <div class="column colFigure">
+                        <img class="figure1" src="Graphics/placeholder2.jpg"></img>
+                    </div>
+                    <div class="column colProcess">
+                            <p class="title">Title of Content</p>
+                            <p class="description">Premise .... Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet
+                                dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper.</p>
+                    </div>
                 </div>
             </div>
         </div>
