--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="flex">
         
             <div class="galleryViewport">
-                <div class="galleryContent">
+                <div class="galleryContent" id="gallery">
                     <div class="column colTitle">
                         <p class="title">Title of Content</p>
                         <p class="description">Premise .... Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet
