--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
        
     </head>
     <body>
-        <button id="colorBar" onclick="openAbout()"></button>
+        <button id="colorBar" onclick="toggleAbout()"></button>
 
         <p class="nameBar">AARON GREIDER</p>
+        <hr class="nameLine">
         <div class="flex">
         
             <div class="galleryViewport">
@@ -46,7 +47,7 @@
             </div>
         </div>
         <button id="circleButton" onclick="expandProject()"></button>
-        <button id="colorBar2" onclick="openMenu()"></button>
+        <button id="colorBar2" onclick="toggleMenu()"></button>
     </body>
 
 </html>
