--- a/index.html
+++ b/index.html
@@ -9,8 +9,46 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
        
     </head>
-    <body>
-        <button id="colorBar" onclick="toggleAbout()"></button>
+    <body>       
+        <button id="colorBar" onclick="toggleAbout()">
+            <div id="aboutWrapper"> 
+                <p class="aboutName">AARON GREIDER</p>
+                <p class="aboutTitle">EDUCATION</p>
+                <ul> 
+                    <li>University of Cincinnati</li>
+                    <li>Visual Communication</li>
+                    <li>Sophomore</li>
+                </ul>
+                <p class="aboutTitle">LEADERSHIP</p>
+                <ul>
+                    <li>2018 AIGA Student Group Co-President</li>
+                    <li>2017 Eagle Scout Award</li>
+                </ul>
+                <div class="skills">
+                    <ul>
+                        <li>Illustrator</li>
+                        <li>InDesign</li>
+                        <li>Premiere Pro</li>
+                        <li>Photoshop</li>
+                    </ul>
+                    <ul>
+                        <li>Autodesk Maya</li>
+                        <li>Wordpress</li>
+                        <li>HTML & CSS</li>
+                        <li>Javascript</li>
+                    </ul>
+                </div>
+                <div class="mediaWrapper">
+                    <hr class="mediaLine">
+                    <a href="" class="mediaLink">BEHANCE</a>
+                    <hr class="mediaLine">
+                    <a href="" class="mediaLink">INSTAGRAM</a>
+                    <hr class="mediaLine">
+                    <a href="" class="mediaLink">LINKEDIN</a>
+                    <hr class="mediaLine">
+                </div>
+            </div>
+        </button>
 
         <p class="nameBar">AARON GREIDER</p>
         <hr class="nameLine">
