--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </head>
     <body>       
         <button id="colorBar" onclick="toggleAbout()">
+            <hr class="aboutLine">
             <div id="aboutWrapper"> 
                 <p class="aboutName">AARON GREIDER</p>
                 <p class="aboutTitle">EDUCATION</p>
@@ -40,11 +41,11 @@
                 </div>
                 <div class="mediaWrapper">
                     <hr class="mediaLine">
-                    <a href="" class="mediaLink">BEHANCE</a>
+                    <a href="https://www.behance.net/aaron_greider" target="_blank" class="mediaLink">BEHANCE</a>
                     <hr class="mediaLine">
-                    <a href="" class="mediaLink">INSTAGRAM</a>
+                    <a href="https://www.instagram.com/aa.j.g/?hl=en" target="_blank" class="mediaLink">INSTAGRAM</a>
                     <hr class="mediaLine">
-                    <a href="" class="mediaLink">LINKEDIN</a>
+                    <a href="www.linkedin.com/in/aaron-greider" target="_blank" class="mediaLink">LINKEDIN</a>
                     <hr class="mediaLine">
                 </div>
             </div>
@@ -75,16 +76,21 @@
                     </div>
                     <div class="column colFigure">
                         <img class="figure1" src="Graphics/placeholder2.jpg"></img>
+                        <button id="circleButton" onclick="expandProject()"></button>
                     </div>
                     <div class="column colProcess">
                             <p class="title">Title of Content</p>
                             <p class="description">Premise .... Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet
-                                dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper.</p>
+                                dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna
+                                aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna
+                                aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna
+                                aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna
+                                aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna
+                                aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper.</p>
                     </div>
                 </div>
             </div>
         </div>
-        <button id="circleButton" onclick="expandProject()"></button>
         <button id="colorBar2" onclick="toggleMenu()"></button>
     </body>
 
