--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
             <div class="galleryViewport">
                 <div class="galleryContent" id="gallery">
                     <div class="column colTitle">
-                        <p class="title">Title of Content</p>
-                        <p class="description">Premise .... Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet
-                        dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper.</p>
+                        <p class="title">Body Mantel</p>
+                        <p class="description">The Poplar Prince’s robes were created from 101 twelve-inch poplar planks and held together with wood adhesive. The initial
+                        concept was modeled and rendered in Autodesk Maya, and the succeeding mantel was a loose adaption of what I could complete
+                        over the course of one all-nighter.</p>
                     </div> 
                     <div class="column colCircMenu">
                         <div class="circleContainer">
@@ -76,15 +77,18 @@
                     </div>
                     <div class="column colFigure">
                         <img class="figure1" src="Graphics/placeholder2.jpg"></img>
-                        <button id="circleButton" onclick="expandProject()"></button>
+                        <!--<button id="circleButton" onclick="expandProject()"></button> -->
+                        <input type="image" src="Graphics/button.png" id="circleButton" onclick="expandProject()"></input> 
                     </div>
                     <div class="column colProcess">
                             <p class="title">Title of Content</p>
-                            <p class="description">Premise .... Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet
-                                dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna
-                                aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna
-                                aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna
-                                aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper.</p>
+                            <p class="description">The model was meant to liken cascading and asymmetrical movement a nontraditional ebb
+                            from bottom right to upper left culminating in a fractal spiral on the left shoulder.<br> <br> Because the poplar planks resembled reeds, I researched styles of traditional reed armor - especially that of ancient eastern
+                            shoguns. I began by creating a duct tape bust of my torso that I could use to brainstorm, though, I opted to brainstorm in
+                            the digital space instead. When I began to construct the mantel, I found that the skeleton made a better bust than my poplar-reinforced
+                            duct tape one. To create dimension of the overall form, a tiny (>.25in) spacer made of cut, layered, and glued poplar was
+                            placed between each plank. Without the spacers there would be no way to glue the sticks together. Each joint was held together
+                            for 30 minutes with a clothespin to avoid damage before the adhesive sealed.</p>
                     </div>
                 </div>
             </div>
