--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
                         </div>
                     </div>
                     <div class="column colFigure">
-                        <img class="figure1" src="Graphics/placeholder2.jpg"></img>
+                        <img id="figure1" src="Graphics/body_mantel_cover.jpg"></img>
                         <!--<button id="circleButton" onclick="expandProject()"></button> -->
                         <input type="image" src="Graphics/button.png" id="circleButton" onclick="expandProject()"></input> 
                     </div>
                     <div class="column colProcess">
-                            <p class="title">Title of Content</p>
+                            <p class="title">101 Poplar Planks and Wood Glue</p>
                             <p class="description">The model was meant to liken cascading and asymmetrical movement a nontraditional ebb
                             from bottom right to upper left culminating in a fractal spiral on the left shoulder.<br> <br> Because the poplar planks resembled reeds, I researched styles of traditional reed armor - especially that of ancient eastern
                             shoguns. I began by creating a duct tape bust of my torso that I could use to brainstorm, though, I opted to brainstorm in
@@ -89,6 +89,8 @@
                             duct tape one. To create dimension of the overall form, a tiny (>.25in) spacer made of cut, layered, and glued poplar was
                             placed between each plank. Without the spacers there would be no way to glue the sticks together. Each joint was held together
                             for 30 minutes with a clothespin to avoid damage before the adhesive sealed.</p>
+                            <img class="figureProcess" src="Graphics/body_mantel_process1.jpg"></img>
+                            <img class="figureProcess" src="Graphics/body_mantel_process2.jpg"></img>
                     </div>
                 </div>
             </div>
