fixed linkin link

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <hr class="mediaLine">
                     <a href="https://www.instagram.com/aa.j.g/?hl=en" target="_blank" class="mediaLink">INSTAGRAM</a>
                     <hr class="mediaLine">
-                    <a href="www.linkedin.com/in/aaron-greider" target="_blank" class="mediaLink">LINKEDIN</a>
+                    <a href="https://www.linkedin.com/in/aaron-greider" target="_blank" class="mediaLink">LINKEDIN</a>
                     <hr class="mediaLine">
                 </div>
             </div>
