--- a/index.html
+++ b/index.html
@@ -54,45 +54,81 @@
         <p class="nameBar">AARON GREIDER</p>
         <hr class="nameLine">
         <div class="flex">
-        
             <div class="galleryViewport">
-                <div class="galleryContent" id="gallery">
-                    <div class="column colTitle">
-                        <p class="title">Body Mantel</p>
-                        <p class="description">The Poplar Prince’s robes were created from 101 twelve-inch poplar planks and held together with wood adhesive. The initial
-                        concept was modeled and rendered in Autodesk Maya, and the succeeding mantel was a loose adaption of what I could complete
-                        over the course of one all-nighter.</p>
-                    </div> 
-                    <div class="column colCircMenu">
-                        <div class="circleContainer">
-                            <div class="circle"></div>
-                            <div class="circle"></div>
-                            <div class="circle"></div>
-                            <div class="circle"></div>
-                            <div class="circle"></div>
-                            <div class="circle"></div>
-                            <div class="circle"></div>
-                            <div class="circle"></div>
+                <div class="galleryContent" id="gallery" style="left: 0px;">
+                    <div class="gallerySlider" id="gallerySlider1">
+                        <div class="column colTitle">
+                            <p class="title">Body Mantel</p>
+                            <p class="description">The Poplar Prince’s robes were created from 101 twelve-inch poplar planks and held together with wood adhesive. The initial
+                            concept was modeled and rendered in Autodesk Maya, and the succeeding mantel was a loose adaption of what I could complete
+                            over the course of one all-nighter.</p>
+                        </div> 
+             <!--       <div class="column colCircMenu">
+                            <div class="circleContainer">
+                                <div class="circle"></div>
+                                <div class="circle"></div>
+                                <div class="circle"></div>
+                                <div class="circle"></div>
+                                <div class="circle"></div>
+                                <div class="circle"></div>
+                                <div class="circle"></div>
+                                <div class="circle"></div>
+                            </div>
+                        </div>
+              -->
+                        <div class="column colFigure">
+                            <img id="figure1" src="Graphics/body_mantel_cover.jpg"></img>
+                            <!--<input type="image" src="Graphics/button.png" id="circleButton" onclick="expandProject()"></input>--> 
+                        </div>
+                        <div class="column colProcess">
+                                <p class="title">101 Poplar Planks and Wood Glue</p>
+                                <p class="description">The model was meant to liken cascading and asymmetrical movement a nontraditional ebb
+                                from bottom right to upper left culminating in a fractal spiral on the left shoulder.<br> <br> Because the poplar planks resembled reeds, I researched styles of traditional reed armor - especially that of ancient eastern
+                                shoguns. I began by creating a duct tape bust of my torso that I could use to brainstorm, though, I opted to brainstorm in
+                                the digital space instead. When I began to construct the mantel, I found that the skeleton made a better bust than my poplar-reinforced
+                                duct tape one. To create dimension of the overall form, a tiny (>.25in) spacer made of cut, layered, and glued poplar was
+                                placed between each plank. Without the spacers there would be no way to glue the sticks together. Each joint was held together
+                                for 30 minutes with a clothespin to avoid damage before the adhesive sealed.</p>
+                                <img class="figureProcess" src="Graphics/body_mantel_process1.jpg"></img>
+                                <img class="figureProcess" src="Graphics/body_mantel_process2.jpg"></img>
                         </div>
                     </div>
-                    <div class="column colFigure">
-                        <img id="figure1" src="Graphics/body_mantel_cover.jpg"></img>
-                        <!--<button id="circleButton" onclick="expandProject()"></button> -->
-                        <input type="image" src="Graphics/button.png" id="circleButton" onclick="expandProject()"></input> 
-                    </div>
-                    <div class="column colProcess">
-                            <p class="title">101 Poplar Planks and Wood Glue</p>
-                            <p class="description">The model was meant to liken cascading and asymmetrical movement a nontraditional ebb
-                            from bottom right to upper left culminating in a fractal spiral on the left shoulder.<br> <br> Because the poplar planks resembled reeds, I researched styles of traditional reed armor - especially that of ancient eastern
-                            shoguns. I began by creating a duct tape bust of my torso that I could use to brainstorm, though, I opted to brainstorm in
-                            the digital space instead. When I began to construct the mantel, I found that the skeleton made a better bust than my poplar-reinforced
-                            duct tape one. To create dimension of the overall form, a tiny (>.25in) spacer made of cut, layered, and glued poplar was
-                            placed between each plank. Without the spacers there would be no way to glue the sticks together. Each joint was held together
-                            for 30 minutes with a clothespin to avoid damage before the adhesive sealed.</p>
-                            <img class="figureProcess" src="Graphics/body_mantel_process1.jpg"></img>
-                            <img class="figureProcess" src="Graphics/body_mantel_process2.jpg"></img>
-                    </div>
+                    <div class="gallerySlider" id="gallerySlider2">
+                        <div class="column colTitle">
+                            <p class="title">Matière Texture Swatch</p>
+                            <p class="description">To study the capacity of material textures and the effect of their combination, we were assigned to create a single entity
+                            composed of two materials with unique tactile qualities. My swatch used candle wax and poplar planks.</p>
+                        </div> 
+                        <div class="column colFigure">
+                            <img id="figure1" src="Graphics/matiere_cover.jpg"></img>
+                            <!--<input type="image" src="Graphics/button.png" id="circleButton" onclick="expandProject()"></input>-->
+                        </div>
+                        <div class="column colProcess">
+                                <p class="title">Poplar Planks and Candle Wax</p>
+                                <p class="description">Melting the wax intrigued me, so I experimented with different factors’ effect on the cooling speed. I came to the conclusion
+                                that pouring wax onto water and a dry surface simultaneously would adhere the wax to the surface and quickly create a hardened
+                                structure that retained the likeness of the fluid state. Because wax repels water, the wax would unconditionally adhere to
+                                itself, lending the capability to create a complex wax labyrinth. I constructed a grid out of the planks which would serve
+                                as structural support for a 1x1 foot wax swatch. Then using clothespins, shoelace, and a ruler I created a mechanism to suspend
+                                the grid on the surface of the water (in a dishbin) so I could freely pour the wax onto both the water and the poplar</p>
+                                <img class="figureProcess" src="Graphics/matiere_process1.jpg"></img>
+                                <img class="figureProcess" src="Graphics/matiere_process2.jpg"></img>
+                                <img class="figureProcess" src="Graphics/matiere_process3.jpg"></img>
+                        </div>
                 </div>
+            </div>
+            <div class="navContent" id="navContent1">
+                <div id="circleContainer">
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                </div>
+                <input type="image" src="Graphics/button.png" id="circleButton" onclick="expandProject()"></input>
             </div>
         </div>
         <button id="colorBar2" onclick="toggleMenu()"></button>
