prohibit default scroll

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <hr class="nameLine">
         <div class="flex">
             <div class="galleryViewport">
-                <div class="galleryContent" id="gallery" style="left: 0px;">
+                <div class="galleryContent" id="gallery">
                     <div class="gallerySlider" id="gallerySlider1">
                         <div class="column colTitle">
                             <p class="title">Body Mantel</p>
