functional project nav buttons

--- a/index.html
+++ b/index.html
@@ -63,22 +63,8 @@
                             concept was modeled and rendered in Autodesk Maya, and the succeeding mantel was a loose adaption of what I could complete
                             over the course of one all-nighter.</p>
                         </div> 
-             <!--       <div class="column colCircMenu">
-                            <div class="circleContainer">
-                                <div class="circle"></div>
-                                <div class="circle"></div>
-                                <div class="circle"></div>
-                                <div class="circle"></div>
-                                <div class="circle"></div>
-                                <div class="circle"></div>
-                                <div class="circle"></div>
-                                <div class="circle"></div>
-                            </div>
-                        </div>
-              -->
                         <div class="column colFigure">
                             <img id="figure1" src="Graphics/body_mantel_cover.jpg"></img>
-                            <!--<input type="image" src="Graphics/button.png" id="circleButton" onclick="expandProject()"></input>--> 
                         </div>
                         <div class="column colProcess">
                                 <p class="title">101 Poplar Planks and Wood Glue</p>
@@ -119,14 +105,15 @@
             </div>
             <div class="navContent" id="navContent1">
                 <div id="circleContainer">
-                    <div class="circle"></div>
-                    <div class="circle"></div>
-                    <div class="circle"></div>
-                    <div class="circle"></div>
-                    <div class="circle"></div>
-                    <div class="circle"></div>
-                    <div class="circle"></div>
-                    <div class="circle"></div>
+                    <input type="button" class="circle" onclick="selectProject(1)"></input>
+                    <input type="button" class="circle" onclick="selectProject(2)"></input>
+                    <input type="button" class="circle" onclick="selectProject(3)"></input>
+                    <input type="button" class="circle" onclick="selectProject(4)"></input>
+                    <input type="button" class="circle" onclick="selectProject(5)"></input>
+                    <input type="button" class="circle" onclick="selectProject(6)"></input>
+                    <input type="button" class="circle" onclick="selectProject(7)"></input>
+                    <input type="button" class="circle" onclick="selectProject(8)"></input>
+
                 </div>
                 <input type="image" src="Graphics/button.png" id="circleButton" onclick="expandProject()"></input>
             </div>
