changed menu appearance and location

--- a/index.html
+++ b/index.html
@@ -80,11 +80,8 @@
         </div>
     </div>
 
-    <svg id="hamburger" onclick="toggleMenu()">
-        <line x1="0" y1="2%" x2="100%" y2="2%" />
-        <line x1="0" y1="50%" x2="100%" y2="50%" />
-        <line x1="0" y1="98%" x2="100%" y2="98%" />
-    </svg>
+    <div id="hamburger" onclick="toggleMenu()">
+        <hr class="left">MENU<hr class="right"></div>
 
     <p class="nameBar">AARON GREIDER</p>
     <hr class="nameLine">
