--- a/index.html
+++ b/index.html
@@ -90,37 +90,39 @@
         <hr class="right">
     </div>
 
+
     <div id="viewport">
         <div class="galleryContent" id="gallery">
             <div class="gallerySlider" id="gallerySlider1">
-                <div class="column colFigure">
-                    <img class="titleFigure" id="figure1" src="Graphics/body_mantle_cover.jpg"></img>
-                </div>
-                <div class="column colTitle">
-                    <p class="title">Body Mantle</p>
-                    <hr class="line">
-                    <p class="description">The Poplar Prince’s robes were created from 101 twelve-inch poplar planks and held together with wood
-                        adhesive. The initial concept was modeled and rendered in Autodesk Maya, and the succeeding mantle
-                        was a loose adaption of what I could complete over the course of one all-nighter.</p>
-                </div>
-                <div class="column colProcess">
-                    <p class="title">101 Poplar Planks and Wood Glue</p>
-                    <p class="description">The model was meant to liken cascading and asymmetrical movement a nontraditional ebb from bottom right
-                        to upper left culminating in a fractal spiral on the left shoulder.
-                        <br>
-                        <br> Because the poplar planks resembled reeds, I researched styles of traditional reed armor - especially
-                        that of ancient eastern shoguns. I began by creating a duct tape bust of my torso that I could use
-                        to brainstorm, though, I opted to brainstorm in the digital space instead. When I began to construct
-                        the mantle, I found that the skeleton made a better bust than my poplar-reinforced duct tape one.
-                        To create dimension of the overall form, a tiny (>.25in) spacer made of cut, layered, and glued poplar
-                        was placed between each plank. Without the spacers there would be no way to glue the sticks together.
-                        Each joint was held together for 30 minutes with a clothespin to avoid damage before the adhesive
-                        sealed.
-                    </p>
-                    <img class="figureProcess" src="Graphics/body_mantle_process1.jpg"></img>
-                    <img class="figureProcess" src="Graphics/body_mantle_process2.jpg"></img>
+                <div id="scrollContent">
+                    <div class="column colTitle">
+                        <p class="title">Body Mantle</p>
+                        <hr class="line">
+                        <p class="description">The Poplar Prince’s robes were created from 101 twelve-inch poplar planks and held together with
+                            wood adhesive. The initial concept was modeled and rendered in Autodesk Maya, and the succeeding
+                            mantle was a loose adaption of what I could complete over the course of one all-nighter.</p>
+                    </div>
+                    <div class="column colProcess">
+                        <img class="figureProcess" id="figure1" src="Graphics/body_mantle_process1.jpg"></img>
+                        <p class="title">101 Poplar Planks and Wood Glue</p>
+                        <p class="processDescription">The model was meant to liken cascading and asymmetrical movement a nontraditional ebb from bottom
+                            right to upper left culminating in a fractal spiral on the left shoulder.
+                            <br>
+                            <br> Because the poplar planks resembled reeds, I researched styles of traditional reed armor - especially
+                            that of ancient eastern shoguns. I began by creating a duct tape bust of my torso that I could
+                            use to brainstorm, though, I opted to brainstorm in the digital space instead. When I began to
+                            construct the mantle, I found that the skeleton made a better bust than my poplar-reinforced
+                            duct tape one. To create dimension of the overall form, a tiny (>.25in) spacer made of cut, layered,
+                            and glued poplar was placed between each plank. Without the spacers there would be no way to
+                            glue the sticks together. Each joint was held together for 30 minutes with a clothespin to avoid
+                            damage before the adhesive sealed.
+                        </p>
+                        <img class="figureProcess" id="figure2" src="Graphics/body_mantle_process2.jpg"></img>
+                    </div>
                 </div>
             </div>
+
+
             <div class="gallerySlider" id="gallerySlider2">
                 <div class="column colTitle">
                     <p class="title">Patch</p>
@@ -296,6 +298,8 @@
                 </div>
             </div>
         </div>
+
+
         <div class="navContent" id="navContent1">
             <div id="circleContainer">
                 <input type="button" class="circle" onclick="selectProject(1)"></input>
